# fantasia-final

./: CMakeLists.txt  README.md  audiomanager.cpp  cores.txt  gamemanager.cpp  main.cpp  monster.cpp  player.cpp  scoremanager.cpp  uimanager.cpp
assets/audios/combat/: Bad Romance - Lady Gaga (8-bit) - Sonic for Hire Music.m4a  In_The_End_8_Bit_Tribute_to_Chester_Bennington_RIP_&_Linkin_Park.m4a  Naruto - The Rising Fighting Spirit 8bit_48k.m4a  Pumped_Up_Kicks_8_Bit_Universe_Tribute_to_Foster_The_People_48k.m4a
assets/audios/exploração/: Bad [8 Bit Tribute to Michael Jackson] - 8 Bit Universe_48k.m4a  Life Is Strange - Obstacles [8-Bit Cover]_48k.m4a  Lisztomania_48k.m4a  Livin'_On_A_Prayer_8_Bit_Cover_Tribute_to_Bon_Jovi_8_Bit_Universe.m4a  Stressed_Out_8_Bit_Remix_Cover_Version_Tribute_to_Twenty_One_Pilots.m4a  Take_On_Me_8_Bit_Remix_Cover_Version_Tribute_to_A_ha_8_Bit_Universe.m4a
assets/audios/músicas/: creditos.txt
assets/sprites/: Actors_1.xcf
assets/sprites/maps/Aekashics Librarium Idle Frontview Sprites/: !$Ancient_Priestess.png.save
